syntax = "proto3";

package infra.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


option go_package = "api/infra/v1;v1";


service Infra {
  rpc GetConfig(google.protobuf.Empty) returns (InfraRes) {
    option (google.api.http) = {
      get: "/infra/v1/config"
    };
  }
}

message InfraRes {
      string kubespray_version = 1;
      string kubespray_path = 2;
      string kubespary_package_tag = 3;
      string script_path = 4;
}